--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jl",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon ./src/app.js"
   },
@@ -9,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {},
   "description": ""
