--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongodb": "^6.1.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   },
