--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.1.0",
