--- a/src/utils/docs/Products/Products.yaml
+++ b/src/utils/docs/Products/Products.yaml
@@ -1,6 +1,86 @@
 paths:
-  /api/users:
+  /api/products:
     get:
-      summary: Obtiene todos los usuarios
+      summary: Obtiene todos los productos
       tags:
-        -users
+        - products
+      responses:
+        "200":
+          description: Los productos fueron obtenidos satisfactoriamente desde la BD.
+          content: 
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/product'
+        "500":
+          description: Algo falló en la búsqueda de productos en la BD.
+
+  /api/products/{pid}:
+    get:
+      summary: Obtiene un producto según su id
+      tags:
+        - products
+      parameters:
+        - name: pid
+          in: path
+          description: Id del producto a buscar
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Producto encontrado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/product'
+
+    put:
+      summary: Actualiza un producto a partir de su id
+      tags:
+        - products
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: Id del producto
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/product'
+
+components:
+  schemas:
+    product:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: Id autogenerado de mongo
+        title:
+          type: string
+          description: Nombre de producto
+        description:
+          type: string
+          description: Descripcion de producto
+        price:                
+          type: number
+          description: Precio de producto
+        thumbnail:                
+          type: string
+          description: Imagen de producto
+        code:                
+          type: string
+          description: Codigo de producto
+        stock:                
+          type: string
+          description: Stock de producto
+        status:                
+          type: string
+          description: Status de producto
+        category:                
+          type: string
+          description: Nombre de Categoria de producto
